src/assets/scss/_spotlight.scss
.spotlight {
  &-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    position: relative;

    @media screen and (max-width: 900px) {
      height: auto;
    }

    &.page {
      width: calc(100% - 600px - 10rem * 2);
      margin-left: 600px;
      padding: 0 10rem;
      z-index: 10001;

      @media screen and (max-width: 1680px) {
        width: calc(100% - 300px - 3rem * 2);
        margin-left: 300px;
        padding: 0 3rem;
      }

      @media screen and (max-width: 650px) {
        width: auto;
        margin: 0;
        padding: 1rem;
      }

      >.spotlight {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: row;
        align-items: center;
      }
    }
  }

  display: flex;

  .container {
    display: flex;
    width: 100%;
    margin: 3rem 0;
    height: calc(100% - 3rem * 2);
    flex-direction: row-reverse;

    @media screen and (max-width: 1560px) {
      margin: 3rem 0;
      height: calc(100% - 3rem * 2);
    }

    @media screen and (max-width: 1280px) and (min-width: 768px) {
      max-height: calc(100vh - 3rem * 2);
    }

    @media screen and (max-width: 1024px) {
      margin: 2rem 0;
      height: calc(100% - 2rem * 2);
    }

    @media screen and (max-width: 650px) {
      flex-direction: column;
    }

    h1 {
      writing-mode: vertical-rl;
      font-weight: 900;
      font-size: 48px;
      color: $tone;
      margin-left: 2rem;

      @media screen and (max-width: 1280px) {
        font-size: 36px;
        margin-left: 1rem;
      }

      @media screen and (max-width: 1024px) {
        font-size: 32px;
        margin-left: .5rem;
      }

      @media screen and (max-width: 650px) {
        writing-mode: horizontal-tb;
        margin-top: 2rem;
      }
    }

    .content {
      display: inline-flex;
      flex-direction: column;
      writing-mode: vertical-rl;
      color: $content;
      margin-left: 1.25rem;

      @media screen and (max-width: 1366px) {
        margin-left: 1rem;
      }

      @media screen and (max-width: 1280px) {
        margin-left: .5rem;
      }

      @media screen and (max-width: 650px) {
        writing-mode: horizontal-tb;
      }

      h2 {
        font-weight: 700;
        margin: 0 5px;
        text-decoration: underline overline;
        text-decoration-color: rgba($content, .5);
        font-size: 32px;

        @media screen and (max-width: 1560px) {
          font-size: 26px;
        }

        @media screen and (max-width: 1280px) {
          font-size: 24px;
        }

        @media screen and (max-width: 1112px) {
          font-size: 20px;
          text-decoration: none;
        }

        @media screen and (max-width: 650px) {
          margin: 5px 0;
        }
      }

      ul {
        display: inline-flex;
        flex-direction: column;
        font-size: 18px;

        li {
          p {
            display: flex;
            white-space: nowrap;
            line-height: 1.4;

            a {
              text-decoration: none;
              color: inherit;
              font-weight: 700;
            }

            &.subtitle {
              margin-left: .5rem;

              @media screen and (max-width: 650px) {
                margin: 0;
                margin-bottom: .5rem;
              }
            }

            span {
              margin-top: 2rem;
              white-space: pre-wrap;

              @media screen and (max-width: 650px) {
                margin: 0;
                margin-left: 1rem;
              }
            }
          }
        }

        @media screen and (max-width: 1560px) {
          font-size: 15.6px;
        }

        @media screen and (max-width: 1280px) {
          font-size: 14px;
        }

        @media screen and (max-width: 1112px) {
          font-size: 12px;
        }
      }
    }
  }
}

